<resources>
    <string name="app_name">All Social Media </string>

    <string name="app_namea">All Social site</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="_10sp">10sp</string>
    <string name="more">More Apps</string>
    <string name="privacy_and_policy">Privacy And Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="communicate">Communicate</string>


</resources>
